--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <script src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script src="https://trello.com/power-ups/power-up.min.js"></script>
+    <script src="https://p.trellocdn.com/power-up.min.js"></script>
     <script src="/js/client.js"></script>
   </body>
 </html>
