--- a/public/set-snooze.html
+++ b/public/set-snooze.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://trello.com/power-ups/power-up.css">
+    <link rel="stylesheet" href="https://p.trellocdn.com/power-up.min.css">
     <link rel="stylesheet" href="datepicker.css">
-    <script src="https://trello.com/power-ups/power-up.min.js"></script>
+    <script src="https://p.trellocdn.com/power-up.min.js"></script>
   </head>
   <body style="overflow:hidden;">
     <div class="dpicker-widget">
